--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@ main:
     url: /cv/
   - title: "Publications"
     url: /publications/
-  # - title: "Blog"
-  #   url: /blog/
+  - title: "Blog"
+    url: /blog/
