add linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   uri: "https://chozelinek.github.io"
   github: chozelinek
   twitter: chozelinek
-  linkedin: # optional
+  linkedin: josé-manuel-martínez-martínez-15b118b
 
 include:
     - "_pages"
