--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "(computational) linguist & translator"
 author:
   name: "José Manuel Martínez Martínez"
   avatar: "https://avatars0.githubusercontent.com/u/2077497?v=3&s=460"
-  bio: "Born in Valencia, Spain. Currently in Saarbrücken, Germany. Passionate about languages, coding, climbing, performing arts, and travelling."
+  bio: "Living between Saarbrücken, Germany and Valencia, Spain. Passionate about languages, coding, climbing, performing arts, and travelling."
   email: # optional
   uri: "https://chozelinek.github.io"
   github: chozelinek
