--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: minimal-mistakes-jekyll
 locale: "en-US"
 title: "José Manuel Martínez Martínez"
 name: "José Manuel Martínez Martínez"
-description: "(computational) linguist & translator"
+description: "computational linguist & translator"
 
 author:
   name: "José Manuel Martínez Martínez"
